pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu1
  labels:
    app: ubuntu1
spec:
  containers:
    - name: ubuntu
      image: ubuntu:18.04
      command: ["bash", "-c"]
      args: ["apt-get update && apt-get install -y curl python3 && while true; do sleep 1; done"]
      ports:
        - containerPort: 80
