pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu2
  labels:
    app: ubuntu2
spec:
  containers:
    - name: ubuntu
      image: ubuntu:18.04
      command: ["bash", "-c"]
      args: ["apt-get update && apt-get install -y curl && while true; do sleep 1; done"]
